chart/test/gslb-ingress-roundRobin.yaml
apiVersion: k8gb.absa.oss/v1beta1
kind: Gslb
metadata:
  name: gslbtenx
spec:
  ingress:
    ingressClassName: nginx
    rules:
      - host: test.example.com
        http:
          paths:
          - path: /
            pathType: Prefix
            backend:
              service:
                name: nginx-test
                port:
                  number: 80
  strategy:
    dnsTtlSeconds: 30
    splitBrainThresholdSeconds: 300
    type: roundRobin
