chart/test/gslb-ingress-select.yaml
apiVersion: k8gb.absa.oss/v1beta1
kind: Gslb
metadata:
  name: nginx-test
  namespace: gaozh
spec:
  resourceRef:
    apiVersion: networking.k8s.io/v1
    kind: Ingress
    matchLabels:
      app: nginx-test
  strategy:
    dnsTtlSeconds: 30
    splitBrainThresholdSeconds: 300
    type: roundRobin
