chart/test/init-ingress.yaml
apiVersion: networking.k8s.io/v1
kind: Ingress
metadata:
  labels:
    app: init-ingress
    k8gb.io/ip-source: "true"
  name: init-ingress
spec:
  ingressClassName: nginx
  rules:
  - host: init.example.com
    http:
      paths:
      - backend:
          service:
            name: k8gb-coredns
            port:
              name: udp-5353
        path: /
        pathType: Prefix
